--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@azure/openai": "1.0.0-beta.12",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -21,6 +22,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "ai": "^3.1.14",
     "axios": "^1.6.7",
     "cheerio": "1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
